unpackaged/main/default/objects/Job__c/fields/Contingent_PTO_Date__c.field-meta.xml
<CustomField>
    <fullName>Contingent_PTO_Date__c</fullName>
    <label>Contingent PTO Date</label>
    <type>Date</type>
</CustomField>