unpackaged/main/default/objects/Job__c/fields/Contract_Loan_Match__c.field-meta.xml
<CustomField>
    <fullName>Contract_Loan_Match__c</fullName>
    <label>Contract/Loan Match</label>
    <type>Date</type>
</CustomField>