unpackaged/main/default/objects/Job__c/fields/Contract_Received_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed__c</fullName>
    <label>Contract Received Confirmed</label>
    <type>Date</type>
</CustomField>