unpackaged/main/default/objects/Job__c/fields/Contract_Received_Confirmed_CH__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed_CH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Received Confirmed</label>
    <type>Checkbox</type>
</CustomField>