unpackaged/main/default/objects/Job__c/fields/Contract_Received_Confirmed_Illinois__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Confirmed_Illinois__c</fullName>
    <label>Contract Received Confirmed Illinois</label>
    <type>Date</type>
</CustomField>