unpackaged/main/default/objects/Job__c/fields/Contract_Verification_Sunnova__c.field-meta.xml
<CustomField>
    <fullName>Contract_Verification_Sunnova__c</fullName>
    <label>Contract Verification (Sunnova)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>