unpackaged/main/default/objects/Job__c/fields/Coordination_Owner__c.field-meta.xml
<CustomField>
    <fullName>Coordination_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordination Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>