unpackaged/main/default/objects/Job__c/fields/Copy_of_Electrical_Build_License__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Electrical_Build_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Electrical/Build License</label>
    <type>Checkbox</type>
</CustomField>