unpackaged/main/default/objects/Job__c/fields/Copy_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Permit</label>
    <type>Checkbox</type>
</CustomField>