unpackaged/main/default/objects/Job__c/fields/Copy_of_the_utility_bill_in_Alchemy__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_the_utility_bill_in_Alchemy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm a copy of the utility bill exists in Alchemy</inlineHelpText>
    <label>Copy of the utility bill in Alchemy</label>
    <type>Checkbox</type>
</CustomField>