unpackaged/main/default/objects/Job__c/fields/CPS_Package_San_Antonio_Only_Austin__c.field-meta.xml
<CustomField>
    <fullName>CPS_Package_San_Antonio_Only_Austin__c</fullName>
    <label>CPS Package : San Antonio Only Austin</label>
    <type>Date</type>
</CustomField>