unpackaged/main/default/objects/Job__c/fields/Credit_Approved_SunRun__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approved_SunRun__c</fullName>
    <label>Credit Approved(SunRun)</label>
    <type>Date</type>
</CustomField>