unpackaged/main/default/objects/Job__c/fields/Credit_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiration__c</fullName>
    <label>Credit Expiration</label>
    <type>Date</type>
</CustomField>