unpackaged/main/default/objects/Job__c/fields/Credit_Expiration_Loan__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiration_Loan__c</fullName>
    <label>Credit Expiration(Loan)</label>
    <type>Date</type>
</CustomField>