unpackaged/main/default/objects/Job__c/fields/Crew_Confirmed_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Crew_Confirmed_Onsite__c</fullName>
    <label>Crew Confirmed Onsite</label>
    <type>DateTime</type>
</CustomField>