unpackaged/main/default/objects/Job__c/fields/CT_Energy_Audit_Form__c.field-meta.xml
<CustomField>
    <fullName>CT_Energy_Audit_Form__c</fullName>
    <label>CT: Energy Audit Form</label>
    <type>Date</type>
</CustomField>