unpackaged/main/default/objects/Job__c/fields/CT_Placement__c.field-meta.xml
<CustomField>
    <fullName>CT_Placement__c</fullName>
    <label>CT Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Service</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>