unpackaged/main/default/objects/Job__c/fields/CT_Placement_Score__c.field-meta.xml
<CustomField>
    <fullName>CT_Placement_Score__c</fullName>
    <formula>CASE( CT_Placement__c , "Requires Service", -2, "Excellent", 2, "N/A", null, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT Placement - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>