unpackaged/main/default/objects/Job__c/fields/Customer_Action_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Action_Required_Date__c</fullName>
    <label>Customer Action Required Date</label>
    <type>Date</type>
</CustomField>