unpackaged/main/default/objects/Job__c/fields/Customer_Failing_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Customer_Failing_to_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Failing to Action</label>
    <type>Checkbox</type>
</CustomField>