unpackaged/main/default/objects/Job__c/fields/Customer_Finances__c.field-meta.xml
<CustomField>
    <fullName>Customer_Finances__c</fullName>
    <label>Customer Finances</label>
    <type>Date</type>
</CustomField>