unpackaged/main/default/objects/Job__c/fields/Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health__c</fullName>
    <label>Customer Health</label>
    <type>Date</type>
</CustomField>