unpackaged/main/default/objects/Job__c/fields/Customer_Outreach_Rep__c.field-meta.xml
<CustomField>
    <fullName>Customer_Outreach_Rep__c</fullName>
    <label>Customer Outreach Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bennett Barton</fullName>
            </value>
            <value>
                <fullName>Elijah Brown</fullName>
            </value>
            <value>
                <fullName>Andrew Davis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>