unpackaged/main/default/objects/Job__c/fields/Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request__c</fullName>
    <label>Customer Request</label>
    <type>Date</type>
</CustomField>