unpackaged/main/default/objects/Job__c/fields/Customer_Requesting_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requesting_More_Information__c</fullName>
    <label>Customer Requesting More Information</label>
    <type>Date</type>
</CustomField>