unpackaged/main/default/objects/Job__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <type>Date</type>
</CustomField>