unpackaged/main/default/objects/Job__c/fields/Customer_Signature_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Received_Date__c</fullName>
    <label>Customer Signature Received Date</label>
    <type>Date</type>
</CustomField>