unpackaged/main/default/objects/Job__c/fields/Customer_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Unresponsive</label>
    <type>Checkbox</type>
</CustomField>