unpackaged/main/default/objects/Job__c/fields/Customer_Vacation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vacation__c</fullName>
    <label>Customer Vacation</label>
    <type>Date</type>
</CustomField>