unpackaged/main/default/objects/Job__c/fields/Date_of_State_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_State_Approval__c</fullName>
    <label>Date of State Approval</label>
    <type>Date</type>
</CustomField>