unpackaged/main/default/objects/Job__c/fields/Days_Since_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Contract_Received__c</fullName>
    <label>Days Since Contract Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>