unpackaged/main/default/objects/Job__c/fields/Denial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Denial_Notes__c</fullName>
    <label>Denial Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>