unpackaged/main/default/objects/Job__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No streetfacing</fullName>
            </value>
            <value>
                <fullName>Front panels</fullName>
            </value>
            <value>
                <fullName>No panels in community</fullName>
            </value>
            <value>
                <fullName>Application incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>