unpackaged/main/default/objects/Job__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>