unpackaged/main/default/objects/Job__c/fields/Deposit_Returned__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Returned__c</fullName>
    <label>Deposit Returned</label>
    <type>Date</type>
</CustomField>