unpackaged/main/default/objects/Job__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <label>Design</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shade Report</fullName>
            </value>
            <value>
                <fullName>Production Curve</fullName>
            </value>
            <value>
                <fullName>Engineering planset</fullName>
            </value>
            <value>
                <fullName>As-built drawings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>