unpackaged/main/default/objects/Job__c/fields/Design_Changes__c.field-meta.xml
<CustomField>
    <fullName>Design_Changes__c</fullName>
    <label>Design Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Requires Service</fullName>
                <isActive>false</isActive>
                <label>Requires Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>