unpackaged/main/default/objects/Job__c/fields/Design_Other__c.field-meta.xml
<CustomField>
    <fullName>Design_Other__c</fullName>
    <label>Design Other</label>
    <type>Date</type>
</CustomField>