unpackaged/main/default/objects/Job__c/fields/Designed_By__c.field-meta.xml
<CustomField>
    <fullName>Designed_By__c</fullName>
    <label>Designed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exactus</fullName>
            </value>
            <value>
                <fullName>Finulent</fullName>
            </value>
            <value>
                <fullName>Wattmonk</fullName>
            </value>
            <value>
                <fullName>Illumine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>