unpackaged/main/default/objects/Job__c/fields/DHB__c.field-meta.xml
<CustomField>
    <fullName>DHB__c</fullName>
    <label>DHB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>