unpackaged/main/default/objects/Job__c/fields/Disclosure_Completed__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Completed__c</fullName>
    <formula>Opportunity__r.Disclosure_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclosure Completed</label>
    <type>Date</type>
</CustomField>