unpackaged/main/default/objects/Job__c/fields/Disclosure_Sent__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Sent__c</fullName>
    <label>Disclosure Sent</label>
    <type>Date</type>
</CustomField>