unpackaged/main/default/objects/Job__c/fields/Disclosure_Sent_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Sent_for_Signature__c</fullName>
    <formula>Opportunity__r.Disclosure_Sent_for_Signature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclosure Sent for Signature</label>
    <type>Date</type>
</CustomField>