unpackaged/main/default/objects/Job__c/fields/Disclosure_Signed__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Signed__c</fullName>
    <label>Disclosure Signed</label>
    <type>Date</type>
</CustomField>