unpackaged/main/default/objects/Job__c/fields/Docket_Number_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number_Requested_Date__c</fullName>
    <label>Docket Number Requested Date</label>
    <type>Date</type>
</CustomField>