unpackaged/main/default/objects/Job__c/fields/Documentation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Notes__c</fullName>
    <label>Documentation Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>