unpackaged/main/default/objects/Job__c/fields/Driver_License_ID_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_ID_Documentation__c</fullName>
    <label>Driver License/ ID Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>