unpackaged/main/default/objects/Job__c/fields/Efficiency_Letter__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Efficiency Letter</label>
    <type>Checkbox</type>
</CustomField>