unpackaged/main/default/objects/Job__c/fields/Electrical_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electrical Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Electrical Contractor)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>