unpackaged/main/default/objects/Job__c/fields/Electrical_Coordination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Coordination_Notes__c</fullName>
    <label>Electrical Coordination Notes</label>
    <type>TextArea</type>
</CustomField>