unpackaged/main/default/objects/Job__c/fields/Electrical_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Permit_Number__c</fullName>
    <label>Electrical Permit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>