unpackaged/main/default/objects/Job__c/fields/Electrical_Score__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Score__c</fullName>
    <formula>CASE( Electrical__c , "Needs Improvement", 0, "Average", 1, "Satisfactory", 2, "Excellent", 3, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>