unpackaged/main/default/objects/Job__c/fields/Electrical_Stamp_By__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Stamp_By__c</fullName>
    <label>Electrical Stamp By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Renewables</fullName>
            </value>
            <value>
                <fullName>Exactus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>