unpackaged/main/default/objects/Job__c/fields/Electrical_Upgrade_Cost__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Cost__c</fullName>
    <formula>Electrical_Upgrade_Hard_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>