unpackaged/main/default/objects/Job__c/fields/Electrical_Upgrade_Soft_Quote__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Soft_Quote__c</fullName>
    <label>Electrical Upgrade Soft Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>