unpackaged/main/default/objects/Job__c/fields/Energy_Meter_Label__c.field-meta.xml
<CustomField>
    <fullName>Energy_Meter_Label__c</fullName>
    <label>Energy Meter Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Illegible</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>