unpackaged/main/default/objects/Job__c/fields/Energy_Meter_Label_Score__c.field-meta.xml
<CustomField>
    <fullName>Energy_Meter_Label_Score__c</fullName>
    <formula>CASE( Energy_Meter_Label__c , "Complete", 2, "Illegible", 1, "Not Completed", 0, "N/A", null, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Meter Label - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>