unpackaged/main/default/objects/Job__c/fields/Engineering_Planset_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Planset_Received_Date__c</fullName>
    <label>Engineering Planset Received Date</label>
    <type>Date</type>
</CustomField>