unpackaged/main/default/objects/Job__c/fields/Entered_in_AHJ_Database__c.field-meta.xml
<CustomField>
    <fullName>Entered_in_AHJ_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entered in AHJ Database</label>
    <type>Checkbox</type>
</CustomField>