unpackaged/main/default/objects/Job__c/fields/Entered_Payment_Preference__c.field-meta.xml
<CustomField>
    <fullName>Entered_Payment_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entered Payment Preference</label>
    <type>Checkbox</type>
</CustomField>