unpackaged/main/default/objects/Job__c/fields/EPC_SunRun__c.field-meta.xml
<CustomField>
    <fullName>EPC_SunRun__c</fullName>
    <label>EPC (SunRun)</label>
    <type>Date</type>
</CustomField>