unpackaged/main/default/objects/Job__c/fields/Est_Payment__c.field-meta.xml
<CustomField>
    <fullName>Est_Payment__c</fullName>
    <formula>RECs__c  *  Utility_Incentive_Rate__c  * 0.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>