unpackaged/main/default/objects/Job__c/fields/ETA_for_Permit_Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>ETA_for_Permit_Issuance_Date__c</fullName>
    <label>ETA for Permit Issuance Date</label>
    <type>Date</type>
</CustomField>