unpackaged/main/default/objects/Job__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <type>TextArea</type>
</CustomField>