unpackaged/main/default/objects/Job__c/fields/Extra_Docs_BGE_Sq_Footage_Heating_Sou__c.field-meta.xml
<CustomField>
    <fullName>Extra_Docs_BGE_Sq_Footage_Heating_Sou__c</fullName>
    <label>Extra Docs BGE -Sq Footage &amp; Heating Sou</label>
    <type>Date</type>
</CustomField>