unpackaged/main/default/objects/Job__c/fields/Extra_Docs_PEPCO_Load_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Extra_Docs_PEPCO_Load_Calculator__c</fullName>
    <label>Extra Docs PEPCO - Load Calculator</label>
    <type>Date</type>
</CustomField>