unpackaged/main/default/objects/Job__c/fields/Fee_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Fee_Confirmed__c</fullName>
    <label>Fee Confirmed</label>
    <type>Date</type>
</CustomField>