unpackaged/main/default/objects/Job__c/fields/Fee_Required__c.field-meta.xml
<CustomField>
    <fullName>Fee_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Required</label>
    <type>Checkbox</type>
</CustomField>