unpackaged/main/default/objects/Job__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Energization</fullName>
            </value>
            <value>
                <fullName>JCO Requirements</fullName>
            </value>
            <value>
                <fullName>Permit/Inspection Papers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>