unpackaged/main/default/objects/Job__c/fields/Field_Other__c.field-meta.xml
<CustomField>
    <fullName>Field_Other__c</fullName>
    <label>Field Other</label>
    <type>Date</type>
</CustomField>