unpackaged/main/default/objects/Job__c/fields/Field_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Field_Permitting__c</fullName>
    <label>Field Permitting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>