unpackaged/main/default/objects/Job__c/fields/Field_Photos__c.field-meta.xml
<CustomField>
    <fullName>Field_Photos__c</fullName>
    <label>Field Photos</label>
    <type>Date</type>
</CustomField>