unpackaged/main/default/objects/Job__c/fields/Fifth_PTO_Kickback_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Fifth_PTO_Kickback_Reasons__c</fullName>
    <label>Fifth PTO Kickback Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Entry</fullName>
            </value>
            <value>
                <fullName>Pictures</fullName>
            </value>
            <value>
                <fullName>Inspector Clearing Work Orders</fullName>
            </value>
            <value>
                <fullName>Third-Party Supplier Breakage</fullName>
            </value>
            <value>
                <fullName>Customer Issue/Hold</fullName>
            </value>
            <value>
                <fullName>Incorrect Documents</fullName>
            </value>
            <value>
                <fullName>Failed Inspection - Utility</fullName>
            </value>
            <value>
                <fullName>Customer Incorrect Signature</fullName>
            </value>
            <value>
                <fullName>New Document Required</fullName>
            </value>
            <value>
                <fullName>Install Issue</fullName>
            </value>
            <value>
                <fullName>Utility Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>