unpackaged/main/default/objects/Job__c/fields/Final_Signature_Pending_Date_PTO__c.field-meta.xml
<CustomField>
    <fullName>Final_Signature_Pending_Date_PTO__c</fullName>
    <label>Final Signature Pending Date</label>
    <type>Date</type>
</CustomField>