unpackaged/main/default/objects/Job__c/fields/Finance_Verification_Call__c.field-meta.xml
<CustomField>
    <fullName>Finance_Verification_Call__c</fullName>
    <label>Finance Verification Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financier_Stips</valueSetName>
    </valueSet>
</CustomField>